--- a/alembic-env/README
+++ b/alembic-env/README
@@ -1,1 +1,33 @@
 Generic single-database configuration.
+
+## Project Information
+#PROJECT_NAME="E-COMMERCE FastAPI"
+#PROJECT_AUTHOR="ImRsrivastava"
+#
+### Database Information
+#DATABASE_URL="postgresql+psycopg2://postgres:Root%40123@localhost:5432/e_commerce_db"
+#ALEMBIC_DATABASE_URL="postgresql+psycopg2://postgres:Root%%40123@localhost:5432/e_commerce_db"
+##DATABASE_URL="postgresql+psycopg2://postgres:Root%40123@db:5432/e_commerce_db"
+##ALEMBIC_DATABASE_URL="postgresql+psycopg2://postgres:Root%%40123@db:5432/e_commerce_db"
+#DATABASE_ECHO=False
+#
+## JWT Auth
+#JWT_SECRET=d4d54d827c99f1b66813341fa939142ff64ef3fb1e66d6fa9d3f6f9d50e1c774
+#JWT_ALGORITHM=HS256
+#ACCESS_TOKEN_EXPIRE_MINUTES=90
+#JWT_TOKE_URL="/auth/login"
+
+## Docker Information
+#DOCKER_POSTGRES_SQL_HOST="postgres"
+##DOCKER_POSTGRE_SQL_ROOT_PASSWORD="Root@123"       # ROOT PASSWORD is not in PostGreSQL, It is use in MySQL Database.
+#DOCKER_POSTGRES_SQL_USERNAME="postgres"
+#DOCKER_POSTGRES_SQL_DATABASE="e_commerce_db"
+#DOCKER_POSTGRES_SQL_PASSWORD="Root@123"
+#
+#DOCKER_VOLUME="./docker/postgres/data"
+#DOCKER_NETWORK="ecommerce_backend"
+#DOCKER_APP_HOST_PORT=9080
+#DOCKER_APP_CONTAINER_PORT=8000
+#DOCKER_POSTGRES_SQL_HOST_PORT=5435
+#DOCKER_POSTGRES_SQL_CONTAINER_PORT=5432
+
